# paxico

./: .gcc-flags.json  .gitignore  LICENSE  Makefile  Makefile.am  README.md  configure.ac  fcntl.h  libc.c  math.c  memory.c  memory.h  setup-env.sh  start.asm  start.c.old  start.h.old  start.s  stdio.c  stdio.h  stdlib.c  string.c  string.h
extra/: gcc.spec
include/: Makefile.am  ctype.h  errno.h  fcntl.h  libc.h  math.h  memory.h  stdarg.h  stdbool.h  stdint.h  stdio.h  stdlib.h  string.h  syscalls.h  unistd.h
include/bits/: fcntl.h
include/sys/: Makefile.am  stat.h  types.h
src/: Makefile.am  libc.c
src/math/: Makefile.am  ceil.c  fabs.c  log.c  log10.c  pow.c
src/misc/: Makefile.am  ctype.c  libc.c  libc_main.c  swap.c
src/platform/: Makefile.am
src/platform/x86_64-linux/: Makefile.am  Scrt1.s  crt1.s  crtbegin.s  crtend.s  crti.s  start.s  syscalls.c
src/stdio/: Makefile.am  flush.c  open.c  printf.c  puts.c  stdio.c  write.c
src/stdlib/: Makefile.am  abs.c  atexit.c  atoi.c  bsearch.c  exit.c  itoa.c  memory.c  qsort.c
src/string/: Makefile.am  memcmp.c  memcpy.c  strchr.c  string.c
tests/: Makefile  Makefile.am  start_noargs.c  strcmp_eq.c  test_itoa.c  test_itoa_atoi  test_itoa_atoi.c  test_start  test_start.c
tests/math/: Makefile.am  ceil_neg.c  ceil_pos.c  fabsnegative.c  fabspositive.c  log1.c  log101.c  log1010.c  log2.c  pow0x2.c  pow1x2.c  pow2_5x2_5.c  pow2_5xn2_5.c
tests/memory/: Makefile.am  free0.c  free20.c  free_nonsense.c  free_second.c  malloc0.c  malloc20.c  malloc_many.c  mallocbig.c
tests/misc/: Makefile.am  swap_simple.c
tests/platform/: Makefile.am
tests/platform/PLATFORM_LINUX/: Makefile.am  sbrk0.c  umask_sanity.c
tests/start/: Makefile.am  argc.c  argv.c  fail.c  success.c
tests/start/argc.test/: argc.exp
tests/start/argv.test/: argv.exp
tests/start/fail.test/: fail.exp
tests/start/success.test/: success.exp
tests/stdarg/: Makefile.am  basic.c  basicnoargs.c
tests/stdio/: Makefile.am  fdopen_init.c  printf_bad_ps.c  printf_noformat.c  printf_plainformat.c  printf_ps_escape.c
tests/stdlib/: Makefile.am  abs_neg.c  abs_pos.c  abs_zero.c  atoi_garbage_post.c  atoi_garbage_pre.c  atoi_negative.c  atoi_negative_garbage.c  atoi_none.c  atoi_positive.c  bsearch_high.c  bsearch_low.c  bsearch_mid.c  bsearch_true.c  exit_test.c  itoa_base_10_0.c  itoa_base_10_1.c  itoa_neg_base_10_255.c  itoa_neg_base_16_255.c  itoa_neg_base_2_255.c  itoa_pos_base_2_18.c  itoa_pos_base_2_255.c  labs_neg.c  labs_pos.c  labs_zero.c  qsort_presorted.c  qsort_unsorted.c
tests/stdlib/exit_test.test/: exit.exp
tests/string/: Makefile.am  memcmp_false.c  memcmp_true.c  memcmp_zero.c  memcpy_ten.c  memcpy_zero.c  memset_zero.c  strchr_false.c  strchr_true.c  strcmp_eq.c  strcmp_noeq_diff_length.c  strcmp_noeq_diff_length_backwards.c  strcmp_noeq_same_length.c  strcpy_normal.c
