export AM_CFLAGS += -nostdinc -nostdlib
SUBDIRS = math platform stdio stdlib string
lib_LIBRARIES = $(abs_top_builddir)/usr/lib/libc.a
__abs_top_builddir__usr_lib_libc_a_SOURCES = libc.c
__abs_top_builddir__usr_lib_libc_a_LIBADD = math/libmath.la platform/libplatform.la stdio/libstdio.la stdlib/libstdlib.la string/libstring.la
