atoi = atoi_none atoi_positive atoi_negative atoi_garbage_post atoi_garbage_pre atoi_negative_garbage
abs = abs_neg abs_pos abs_zero
labs = labs_pos labs_neg labs_zero
itoa = itoa_pos_base_2_18 itoa_pos_base_2_255 itoa_neg_base_2_255 itoa_neg_base_10_255 itoa_neg_base_16_255 itoa_base_10_0 itoa_base_10_1
bsearch = bsearch_true bsearch_high bsearch_low bsearch_mid
qsort = qsort_unsorted_ints
check_PROGRAMS = $(atoi) $(abs) $(labs) $(itoa) $(bsearch) #$(qsort)
TESTS = $(check_PROGRAMS)
all:
